# domain_decomp

./: .gitignore  CMakeLists.txt  Dockerfile  DomainUtils.cpp  DomainUtils.hpp  Grid.cpp  Grid.hpp  Partitioner.cpp  Partitioner.hpp  README.md  Utils.hpp  ZoltanPartitioner.cpp  ZoltanPartitioner.hpp  entrypoint.sh  grid.cpp  grid.h  main.cpp  partition.cpp  spack.yaml
.github/workflows/: actions.yml
examples/: CMakeLists.txt  zoltan_comm.cpp
grids/: rect3030.res.cdl
results/: partition_2.nc  partition_4.nc  partition_mask_2.nc  partition_mask_4.nc  partition_metadata_2.nc  partition_metadata_4.nc  rcb_1.nc  rcb_10.nc  rcb_12.nc  rcb_14.nc  rcb_16.nc  rcb_2.nc  rcb_4.nc  rcb_6.nc  rcb_8.nc
test/: CMakeLists.txt  MainMPI.cpp  integration-test.sh  main.cpp  ref_partition_metadata_3.cdl  test_0.cdl  test_0.nc  test_1.cdl  test_1.nc  test_2.cdl  test_2.nc  test_grid_0.cpp  test_grid_0_1.cpp  test_grid_0_2.cpp  test_grid_0_MPI1.cpp  test_grid_0_MPI2.cpp  test_grid_1.cpp  test_grid_1_1.cpp  test_grid_1_2.cpp  test_grid_1_MPI1.cpp  test_grid_1_MPI2.cpp  test_grid_2.cpp  test_grid_2_1.cpp  test_grid_2_2.cpp  test_grid_2_MPI1.cpp  test_grid_2_MPI2.cpp  test_zoltan_partitioner_0.cpp  test_zoltan_partitioner_0_1.cpp  test_zoltan_partitioner_0_2.cpp  test_zoltan_partitioner_0_MPI1.cpp  test_zoltan_partitioner_0_MPI2.cpp  test_zoltan_partitioner_1.cpp  test_zoltan_partitioner_1_1.cpp  test_zoltan_partitioner_1_2.cpp  test_zoltan_partitioner_1_MPI1.cpp  test_zoltan_partitioner_1_MPI2.cpp  test_zoltan_partitioner_2.cpp  test_zoltan_partitioner_2_1.cpp  test_zoltan_partitioner_2_2.cpp  test_zoltan_partitioner_2_3.cpp  (+5 more)
test/test_1/: ref_partition_metadata_3.cdl
test/test_1_p0_p1/: ref_partition_metadata_3.cdl
test/test_1_p1/: ref_partition_metadata_3.cdl
test/test_1_px/: ref_partition_metadata_3.cdl
test/test_1_px_py/: ref_partition_mask_3.cdl  ref_partition_metadata_3.cdl
test/test_1_py/: ref_partition_metadata_3.cdl
test/test_2/: ref_partition_mask_3.cdl  ref_partition_metadata_3.cdl
